# ebso

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  abstract_then_dedup.ml  abstract_then_dedup.sh  addinstructioncount.ml  addinstructioncount.sh  countinstr.ml  dropterminal.ml  dropterminal.sh  dune  dune-project  ebso.ml  ebso.opam  ebso.sh  main.ml  samplesnippets.ml  samplesnippets.sh  snippetseq.ml  snippetseq.sh  then_compute_storage_gas_cost.ml  then_compute_storage_gas_cost.sh
doc/: info_instr.csv  resources.md
examples/: add.easm
examples/01-zero-/: Zero.bin-runtime  Zero_opt.bin-runtime  zero-.sol
examples/02-inline/: Inline.bin-runtime  Inline_opt.bin-runtime  inline.sol
examples/03-tautology/: Tautology.bin-runtime  Tautology_opt.bin-runtime  tautology.sol
examples/04-shift/: Shift.bin-runtime  Shift_opt.bin-runtime  shift.sol
examples/bigquery-top100/: results-top-100.csv
lib/: dune  enc_consts.ml  enc_consts.mli  evm_stack.ml  evm_stack.mli  evm_state.ml  evm_state.mli  evm_storage.ml  evm_storage.mli  evmenc.ml  exc_halt.ml  exc_halt.mli  gas_cost.ml  gas_cost.mli  instruction.ml  instruction.mli  opcode.ml  opcode.mli  parser.ml  printer.ml  program.ml  program.mli  program_counter.ml  program_counter.mli  pusharg.ml  pusharg.mli  stack_index.ml  stack_index.mli  stackarg.ml  superoptimization.ml  superoptimization.mli  uninterpreted_instruction.ml  uninterpreted_instruction.mli  used_gas.ml  used_gas.mli  word.ml  word.mli  z3util.ml
parser/: opcodes.ml
test/: dune  test_classic_superoptimize.ml  test_evmenc.ml  test_instruction.ml  test_nonconstunint.ml  test_opcode.ml  test_parser.ml  test_printer.ml  test_program.ml  test_storage.ml  test_superoptimize.ml  test_transval.ml  tevmenc.ml
