(executable (name ebso)
 (modules ebso)
 (libraries core z3 sedlex csv ebso)
 (preprocess (pps ppx_jane ppx_deriving.std))
 (public_name ebso)
)

(executable (name countinstr)
 (modules countinstr)
 (libraries core sedlex ebso zarith)
 (preprocess (pps ppx_jane ppx_deriving.std))
)

(executable (name snippetseq)
 (modules snippetseq)
 (libraries core sedlex ebso zarith)
 (preprocess (pps ppx_jane ppx_deriving.std))
)

(executable (name samplesnippets)
 (modules samplesnippets)
 (libraries core sedlex ebso zarith csv)
 (preprocess (pps ppx_jane ppx_deriving.std))
)

(executable (name addinstructioncount)
 (modules addinstructioncount)
 (libraries core sedlex ebso zarith csv)
 (preprocess (pps ppx_jane ppx_deriving.std))
)