(executable (name main)
 (modules main)
 (libraries core z3 sedlex csv ebso)
 (preprocess (pps ppx_jane ppx_deriving.std))
 (public_name ebso)
)

(executable (name countinstr)
 (modules countinstr)
 (libraries core sedlex ebso zarith)
 (preprocess (pps ppx_jane ppx_deriving.std))
)

(executable (name abstract_then_dedup)
 (modules abstract_then_dedup)
 (libraries core sedlex ebso zarith csv)
 (preprocess (pps ppx_jane ppx_deriving.std))
)

(executable (name then_compute_storage_gas_cost)
 (modules then_compute_storage_gas_cost)
 (libraries core sedlex ebso zarith csv z3)
 (preprocess (pps ppx_jane ppx_deriving.std))
)
