opam-version: "2.0"
name: "ebso"
version: "2.0"
synopsis: "EVM Bytecode Super Optimizer"
maintainer: [ "mail@jnagele.net" "mail@maria-a-schett.net" ]
authors: [ "mail@jnagele.net" "mail@maria-a-schett.net" ]
license: "Apache-2.0"
homepage: "https://github.com/juliannagele/ebso"
dev-repo: "git+https://github.com:juliannagele/ebso.git"
bug-reports: "https://github.com/juliannagele/ebso/issues"
depends: [
  "ocaml"
  "dune"
  "ocamlfind"
  "z3"
  "core"
  "sedlex"
  "csv"
  "zarith"
  "ounit" {with-test}
  "ppx_sexp_conv"
  "ppx_enumerate"
  "ppx_deriving"
]
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [make "test"]
