(executables
 (names test_evmenc test_superoptimize test_parser test_program test_transval)
 (libraries core ebso oUnit z3)
 (preprocess (pps ppx_deriving.std))
)

(alias
 (name runtest)
 (deps (:x test_evmenc.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_superoptimize.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_parser.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_program.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_transval.exe))
 (action (run %{x}))
)
