(executables
 (names test_evmenc test_superoptimize test_parser test_program
        test_transval test_classic_superoptimize test_nonconstunint
        test_storage test_printer test_instruction test_opcode)
 (libraries core ebso oUnit z3)
 (preprocess (pps ppx_deriving.std))
)

(alias
 (name runtest)
 (deps (:x test_evmenc.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_superoptimize.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_parser.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_program.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_transval.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_classic_superoptimize.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_storage.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_printer.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_instruction.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_opcode.exe))
 (action (run %{x}))
)
